--- a/css/customStyleSheet.css
+++ b/css/customStyleSheet.css
@@ -1,3 +1,4 @@
+/* ************************************** Estilos de tabla ************************************** */
 table.darkTable {
     font-family: "Lucida Console", Monaco, monospace;
     border: 2px solid #871514;
@@ -38,6 +39,9 @@ table.darkTable tfoot td {
     font-size: 12px;
 }
 
+/* ********************************************************************************************** */
+
+/* ************************************** Estilos de inicio ************************************* */
 .index-element {
     border: 4px solid rgb(204, 68, 0);
     border-radius: 10px;
@@ -48,6 +52,9 @@ table.darkTable tfoot td {
     transform: scale(1.1);
 }
 
+/* ********************************************************************************************** */
+
+/* ************************************* Estilos de tarjeta ************************************* */
 .card-body-font {
     font-family: "Lucida Sans Unicode", Charcoal, sans-serif;
     font-size: 115px;
@@ -79,6 +86,9 @@ table.darkTable tfoot td {
     text-transform: none;
 }
 
+/* ********************************************************************************************** */
+
+/* ************************************ Estilos de contenedor *********************************** */
 .index-flex-parent {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
@@ -91,3 +101,5 @@ table.darkTable tfoot td {
     width: 350px;
     height: 350px;
 }
+
+/* ********************************************************************************************** */
